--- a/JenkinsIOSExample/JenkinsIOSExample-Info.plist
+++ b/JenkinsIOSExample/JenkinsIOSExample-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>au.com.shinetech.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.sportsbet.ipadnative</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
